tests/rosetta/transpiler/FS/active-directory-search-for-a-user.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/active-directory-search-for-a-user.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Active-directory-search-for-a-user' based on the file name 'active-directory-search-for-a-user.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/active-directory-search-for-a-user.fs(19,36): error FS0033: The type 'Microsoft.FSharp.Core.array<_>' expects 1 type argument(s) but is given 0
